2.1.0/_sources/gallery/api/agg_oo_sgskip.rst.txt


.. _sphx_glr_gallery_api_agg_oo_sgskip.py:


=============================
The object-oriented interface
=============================

A pure OO (look Ma, no pyplot!) example using the agg backend.



.. code-block:: python


    from matplotlib.backends.backend_agg import FigureCanvasAgg as FigureCanvas
    from matplotlib.figure import Figure

    fig = Figure()
    # A canvas must be manually attached to the figure (pyplot would automatically
    # do it).  This is done by instanciating the canvas with the figure as
    # argument.
    FigureCanvas(fig)
    ax = fig.add_subplot(111)
    ax.plot([1, 2, 3])
    ax.set_title('hi mom')
    ax.grid(True)
    ax.set_xlabel('time')
    ax.set_ylabel('volts')
    fig.savefig('test')

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: agg_oo_sgskip.py <agg_oo_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: agg_oo_sgskip.ipynb <agg_oo_sgskip.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
